# mosum.py

./: .buildinfo  .readthedocs.yaml  LICENSE  README.md  _config.yml  conf.py  genindex.html  index.html  objects.inv  pyproject.toml  pyproject_old.toml  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/mosum/: index.doctree
.doctrees/docs/: usage.doctree
.github/workflows/: documentation.yaml
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/docs/: usage.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_sources/: index.rst.txt
_build/html/autoapi/: index.html
_build/html/docs/: usage.html  usage.ipynb
_sources/autoapi/mosum/: index.rst.txt
autoapi/: index.html
autoapi/mosum/: index.html
autoapi/mosum/classes/: index.html
autoapi/mosum/exhaust_bic/: index.html
docs/: usage.html  usage.ipynb
doctrees/autoapi/: index.doctree
doctrees/docs/: api.doctree  usage.doctree
html/: index.html  searchindex.js
html/docs/: api.html  usage.html
mosum/: __init__.py  bandwidth.py  bootstrap.cpp  bootstrap.py  bottom_up.py  classes.py  exhaust_bic.cpp  exhaust_bic.py  local_prune.py  mosum.py  mosum_stat.py  mosum_test.py  mosum_util.h  persp3D.py  test_data.py  test_models.py
tests/: test.py  test_absolute.py  test_bootstrap.py  test_bottom.py  test_mosumcpts.py  test_mosumstatistic.py  test_multi.py  test_persp3D.py  test_sim.py  test_thresholds.py
(+70 files in other folders)
