[tool.poetry]
name = "mosum"
version = "0.1.0"
description = "Moving Sum Based Procedures for Changes in the Mean"
authors = ["Dom Owens <dom.owens@bristol.ac.uk>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "mosum"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]
python = "^3.9"
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/Dom-Owens-UoB/mosum.py"